crates/musq-macros/tests/trybuild/fail_codec_enum.rs
use musq::Codec;

#[derive(Codec)]
enum Bad<'a, T> {
    A(&'a T),
}

fn main() {}
